--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url "tarjeta_list" %}">Tarjetas</a>
+                <a class="nav-link" href="{% url "cat:model_list" "tarjeta" %}">Tarjetas</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
