--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,3 +16,88 @@
 .big-modal .modal-content {
     height: 790px;
 }
+
+.paginate_button {
+    background-color: rgba(255, 255, 255, 0.08);
+    display: inline-block;
+    color: rgba(255, 255, 255, 0.85);
+    vertical-align: top;
+    border-radius: 50%;
+    margin: 0 1px 0 2px;
+    font-size: 1rem;
+    cursor: pointer;
+    width: 2.5rem;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    text-align: center;
+    transition: background-color 300ms, color 300ms;
+}
+
+.paginate_button.current {
+    background-color: #ffffff;
+    color: #000000;
+    cursor: default;
+}
+
+.paginate_button:not(.current):not(.disabled):hover, .paginate_button:not(.current):not(.disabled):focus {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: rgba(255, 255, 255, 0.85);
+}
+
+.paginate_button.current, .paginate_button.disabled {
+    cursor: default;
+}
+
+.paginate_button.previous, .paginate_button.next {
+    font-size: 0;
+    position: relative;
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .paginate_button.previous, .paginate_button.next {
+        font-size: 1rem;
+    }
+}
+
+.paginate_button.previous:before, .paginate_button.next:before {
+    font-family: "Material-Design-Iconic-Font";
+    font-size: 1rem;
+    line-height: 2.55rem;
+}
+
+.paginate_button.previous:before {
+    content: '\F2FF';
+}
+
+.paginate_button.next:before {
+    content: '\F301';
+}
+
+.paginate_button.disabled {
+    opacity: 0.6;
+}
+
+.paginate_button.disabled:hover, .paginate_button.disabled:focus {
+    color: rgba(255, 255, 255, 0.85);
+}
+
+
+.paginate_button {
+    background-color: rgba(13, 174, 248, 0.08) !important;
+}
+
+.paginate_button.current {
+    background-color: #0daef875 !important;
+}
+
+.paginate_button a {
+	color: black !important;
+}
+
+.paginate_button button {
+	background-color: transparent !important;
+    border: none;
+}
+.paginate_button {
+	color: #352c60 !important;
+}
