--- a/templates/components/list.html
+++ b/templates/components/list.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="row mt-5" ng-controller="GenericListController">
+        <div class="row mt-5" ng-controller="GenericListController" ng-init="init('{{ module }}')">
             <div class="col-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -40,8 +40,8 @@
                                         <div class="d-flex flex-row justify-content-end">
                                             <a href="{{ main_url }}{$ record.id $}/detail/"
                                                class="btn btn-dark ml-2"><i class="fa fa-book"></i></a>
-                                            <a href="{$ end_point $}{$ action.url $}" ng-class="action.button_class" class="ml-2" ng-repeat="action in record.actions">
-                                                <i ng-if="!action.name" class="{$ action.class $}"></i>
+                                            <a href="{$ end_point $}{$ record.id $}/{$ action.name $}/" ng-class="action.button_class" class="ml-2" ng-repeat="action in record.actions">
+                                                <i class="{$ action.class $}"></i>
                                             </a>
                                         </div>
                                     </td>
@@ -63,7 +63,6 @@
     <script>
         let main_url = "{{ main_url }}";
         let end_point = "{{ end_point }}";
-        let module = "{{ module|capfirst }}";
     </script>
     <script src="{% static "js/angular/GenericListController.js" %}"></script>
 {% endblock %}
