--- a/templates/management/models/tarjeta/detail.html
+++ b/templates/management/models/tarjeta/detail.html
@@ -8,8 +8,9 @@
                     <div class="row">
                         <div class="col-4"><h3>Tarjeta #{{ item_id }}</h3></div>
                         <div class="col-8 d-flex flex-row-reverse">
-                            <a href="{% url "tarjeta_refresh" item_id %}?next={% url "tarjeta_detalle" item_id %}" class="btn btn-info"><i
-                                    class="fa fa-refresh"></i></a>
+                            <button onclick="send_api('/api/tarjeta/{{ item_id }}/refresh/')"
+                               class="btn btn-info"><i
+                                    class="fa fa-refresh"></i></button>
                         </div>
                     </div>
                     <div class="row">
@@ -42,171 +43,13 @@
                     {% include "components/sub_list.html" with parent="tarjeta" module="Movimientos" model="movimiento" %}
                     <hr>
                     {% include "components/sub_list.html" with parent="tarjeta" module="Pagos pendientes" model="pagopendiente" %}
-                    <div class="row" ng-controller="GenericSubListController" ng-init="init('Pagos pendientes') ">
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-4"><h3>{$ module $}</h3></div>
-                                <div class="col-8 d-flex flex-row-reverse">
-                                    <a href="{% url "cat:model_sub_add" "tarjeta" item_id "pago_pendiente" %}">
-                                        <button class="btn btn-success"><i class="fa fa-plus"></i></button>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>Monto a pagar</th>
-                                            <th>Moneda</th>
-                                            <th>Concepto</th>
-                                            <th>Automatico</th>
-                                            <th>Estatus</th>
-                                            <th>Acciones</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for pago_pendiente in item.pagos_disponibles %}
-                                            <tr>
-                                                <td>{{ pago_pendiente.cantidad_original }}</td>
-                                                <td>{{ pago_pendiente.moneda }}</td>
-                                                <td>{{ pago_pendiente.concepto }}</td>
-                                                <td>
-                                                    {% if pago_pendiente.pago_automatico %}
-                                                        <span class="text-success">SI</span>
-                                                    {% else %}
-                                                        <span class="text-danger">NO</span>
-                                                    {% endif %}
-                                                </td>
-                                                <td>
-                                                    {% if pago_pendiente.pago_unico %}
-                                                        {{ pago_pendiente.get_estatus_display }}
-                                                    {% else %}
-                                                        Perpetuo
-                                                    {% endif %}
-                                                </td>
-                                                <td>
-                                                    {% if pago_pendiente.estatus == pago_pendiente.PENDIENTE %}
-                                                        <button class="btn btn-sm btn-success" onclick="pago_pendiente_pagar({{ pago_pendiente.id }})">
-                                                            <i class="fa fa-credit-card"></i></button>
-                                                    {% endif %}
-                                                    <a href="{% url "pago_pendiente_detalle" pago_pendiente.pk %}" class="btn btn-sm btn-dark"><i class="fa fa-book"></i></a>
-                                                    {% if pago_pendiente.estatus == pago_pendiente.PENDIENTE %}
-                                                        <a href="{% url "pago_pendiente_editar" pago_pendiente.pk %}" class="btn btn-sm btn-warning"><i class="fa fa-pencil"></i></a>
-                                                        <a href="{% url "pago_pendiente_eliminar" pago_pendiente.pk %}" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
-                                                    {% endif %}
-                                                </td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-12 col-lg-6 col-sm-12">
             <div class="card">
-                <div class="card-body" ng-controller="GenericSubListController" ng-init="init('Abonos pendientes') ">
-                    <div class="row">
-                        <div class="col-4">
-                            <h3>Abonos pendientes</h3>
-                        </div>
-                        <div class="col-8 d-flex flex-row justify-content-end">
-                            <a href="{% url "tarjeta_add_pago_pendiente" item_id %}">
-                                <button class="btn btn-success"><i class="fa fa-plus"></i></button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <table class="table-striped table">
-                            <thead>
-                                <tr>
-                                    <th>Cantidad total</th>
-                                    <th>Moneda</th>
-                                    <th>Cantidad pendiente</th>
-                                    <th>Concepto</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for abono_pendiente in item.abonos_pendientes.all %}
-                                    <tr>
-                                        <td>{{ abono_pendiente.cantidad_original }}</td>
-                                        <td>{{ abono_pendiente.moneda }}</td>
-                                        <td>{{ abono_pendiente.cantidad_pendiente }}</td>
-                                        <td>{{ abono_pendiente.concepto }}</td>
-                                        <td></td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal big-modal" tabindex="-1" role="dialog" id="adjuntos-modal">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content full-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <iframe src="" frameborder="0" scrolling="no" id="adjuntos-iframe" class="full-frame"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal big-modal" tabindex="-1" role="dialog" id="movimiento-delete">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content full-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <iframe src="" frameborder="0" scrolling="no" id="adjuntos-iframe" class="full-frame"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal big-modal" tabindex="-1" role="dialog" id="pago_pendiente-delete">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content full-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <iframe src="" frameborder="0" scrolling="no" id="adjuntos-iframe" class="full-frame"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal big-modal" tabindex="-1" role="dialog" id="pago_pendiente-pagar">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content full-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title"></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form method="POST" id="pagar-form" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <input type="file" name="adjunto" class="form-control-file" required>
-                        <input type="submit" value="Pagar" class="btn btn-success">
-                    </form>
+                <div class="card-body">
+                    {% include "components/sub_list.html" with parent="tarjeta" module="Abonos pendientes" model="abonopendiente" %}
                 </div>
             </div>
         </div>
@@ -218,15 +61,13 @@
             $('.modal').modal('hide')
         })
 
-        function pago_pendiente_pagar(pago_pendiente_id) {
-            $("#pagar-form").attr('action', '{% url "pago_pendiente_pagar" 0 %}'.replace('0', pago_pendiente_id))
-            $('#pago_pendiente-pagar').modal('show')
+        function send_api(url) {
+            let consume = window.location.origin + url
+            $.ajax(consume).done(function(res) {
+                window.location.reload();
+            })
         }
 
-        function load_adjuntos(movimiento_id) {
-            $('#adjuntos-iframe').attr('src', '{% url "movimiento_adjuntos" 0 %}'.replace('0', movimiento_id))
-            $('#adjuntos-modal').modal('show')
-        }
     </script>
     <script src="{% static "js/angular/GenericListController.js" %}"></script>
     <script src="{% static "js/angular/GenericSubListController.js" %}"></script>
