--- a/templates/components/list.html
+++ b/templates/components/list.html
@@ -6,8 +6,8 @@
 {% endblock extrastyle %}
 
 {% block content %}
-    <div class="container">
-        <div class="row mt-5" ng-controller="GenericListController" ng-init="init('{{ module }}')">
+    <div class="container" ng-controller="GenericListController" ng-init="init('{{ module }}', '{{ model }}')">
+        <div class="row mt-5">
             <div class="col-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -55,6 +55,31 @@
                         </table>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row mt-lg-5">
+            <div class="col-lg-12 text-center d-flex justify-content-center">
+                <ul class="pagination">
+                    <li ng-if="data.has_previous" ng-click="go_previous()" class="paginate_button">
+                        <i class="fa fa-chevron-left"></i>
+                    </li>
+                    <li class="paginate_button disabled"
+                        ng-if="!data.has_previous">
+                        <i class="fa fa-chevron-left"></i>
+                    </li>
+                    <li ng-repeat="page in data.pages" class="paginate_button"
+                        ng-class="{'current': page == data.page}" ng-click="goto(page)">
+                        <b>{$ page $}</b>
+                    </li>
+                    <li ng-if="data.has_next" ng-click="go_next()" class="paginate_button">
+                        <i class="fa fa-chevron-right"></i>
+                    </li>
+                    <li class="paginate_button disabled" ng-if="!data.has_next">
+                        <span>
+                            <i class="fa fa-chevron-right"></i>
+                        </span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
